<resources>
    <string name="drawer_open">Abriu</string>
    <string name="drawer_close">fechou</string>

    <string name="mediausjt_name">Média USJT</string>
    <string name="matterName">Matéria</string>
    <string name="required_grade">Nota Mínima</string>
    <string name="cadastramentoSalvar">Salvar Nota</string>
    <string name="descrUSJT">Logo Fundo</string>
    <string name="tvTitulo">Calcule sua Média</string>
    <string name="tvNota1">Nota 1°semestre</string>
    <string name="tvNota2">Nota 2°semestre</string>
    <string name="calcular">Calcular</string>
    <string name="salvar">Salvar  Nota</string>
    <string name="deletar">Deletar Nota</string>
    <string name="deletarTudo">Excluir Notas</string>
    <string name="tvResp">Média Anual</string>
    <string name="tvPrecisa1">Nota Mínima</string>
    <string name="action_settings">Informações</string>
    <string name="contato">Contato</string>
    <string name="conteudo">Contato</string>
    <string name="editarMenu">Editar</string>
    <string name="deletarMenu">Excluir</string>
    <string name="how_to_message">Bem-vindo ao Média USJT.\n\n•  Se deseja saber sua nota anual, informe-a nos dois campos.\n\n•  Se deseja saber qual nota precisa tirar no 2°semestre, informe somente a nota do 1°semestre.\n\n•  Para cadastrar uma nota,faça o cálculo da nota mínima, e em seguida pressione o botão \"Salvar\".\n\n•  Para ver a nota cadastrada,vá para a aba \"Notas Mínimas Cadastradas\".\nPara alteração da nota, escolha a nota, deslize o dedo para a esquerda e escolha a opção \"Excluir\" ou \"Editar\".\n\n•  Caso deseje alterar o peso ou média do cálculo, na aba \"Pesos\", selecione o valor dos pesos ou média.</string>
    <string name="contact_message">Tem novas idéias?\n\nAlgum problema com o aplicativo?\n\nE-mail: mediausjt@gmail.com\n</string>
    <string name="deletarTodasNotas">Você tem certeza que deseja excluir todas as notas ?</string>
    <string name="delete_grade">Você tem certeza que deseja excluir essa nota ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Nao</string>

    <string name="promptPeso">Escolha o peso da nota</string>

    <string name="tvTituloPeso">Peso das Notas</string>
    <string name="tvPeso1">Peso 1°semestre</string>
    <string name="tvPeso2">Peso 2°semestre</string>

    <string name="mudarPeso">Restaurar Padrão</string>
    <string name="delete_sure">Você tem certeza?</string>
    <string name="contact_title">Entre em contato !</string>
    <string name="how_to_title">Como calcular ...</string>
    <string name="calculate_minimal">Calcule uma nota mínima a ser cadastrada</string>
    <string name="only_minimal">Somente notas mínimas podem ser salvas</string>
    <string name="invalid_info">Informações incorretas...</string>
    <string name="reset_message">Configurações resetadas</string>
    <string name="invalid_new_grade">Informe o nome da matéria ou corrija a nota</string>
    <string name="saved_grade">Nota salva</string>
    <string name="unsaved_grade">Nota não salva</string>
    <string name="updated">Atualizado</string>
    <string name="not_updated">Não Atualizado</string>
    <string name="grades_removed_message">Todas as notas excluidas</string>
    <string name="new_grade_title">Salvar Nota</string>
    <string name="no_grades">Nenhuma nota salva</string>
    <string name="removed_grade">Nota Excluida</string>
</resources>
