<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/lt_coordinator"
    android:orientation="vertical"
    tools:context="com.mediausjt.FullscreenActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:alpha=".40"
        android:contentDescription="@string/descrUSJT"
        android:src="@drawable/usjtflat" />

    <RelativeLayout
        android:id="@+id/layRelativeMain3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTituloPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tvTituloPeso"
            android:textColor="@color/AzulMedio"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tv_change_first_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTituloPeso"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/tvPeso1"
            android:textColor="@color/AzulMedio"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekbar_first_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_change_first_grade"
            android:layout_marginTop="15dp"
            android:drawSelectorOnTop="true"
            android:gravity="center_horizontal"
            android:prompt="@string/promptPeso"
            android:transitionGroup="true" />

        <TextView
            android:id="@+id/tv_change_second_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekbar_first_grade"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/tvPeso2"
            android:textColor="@color/AzulMedio"
            android:textSize="20sp"
            android:typeface="serif" />

        <SeekBar
            android:id="@+id/seekbar_second_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_change_second_grade"
            android:layout_marginTop="15dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/promptPeso" />

        <TextView
            android:id="@+id/tvTituloMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbar_second_grade"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="Média"
            android:textColor="@color/AzulMedio"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tv_change_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTituloMedia"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="6"
            android:textColor="@color/AzulMedio"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/seekbar_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_change_average"
            android:layout_marginTop="15dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/promptPeso" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_reset_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fab_button_margin_bottom"
        android:src="@drawable/fab_reset"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_anchor="@id/lt_coordinator"
        app:layout_anchorGravity="bottom|center"
        app:pressedTranslationZ="12dp" />

</android.support.design.widget.CoordinatorLayout>