<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lt_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/lt_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/tvTitulo"
            android:textColor="@color/AzulMedio"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />


        <TextView
            android:id="@+id/tv_first_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitulo"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/tvNota1"
            android:textColor="@color/AzulMedio"
            android:textSize="20sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/et_first_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_first_grade"
            android:layout_marginTop="15dp"
            android:ems="4"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/tv_second_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_first_grade"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="false"
            android:text="@string/tvNota2"
            android:textColor="@color/AzulMedio"
            android:textSize="20sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/et_second_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_second_grade"
            android:layout_marginTop="15dp"
            android:ems="4"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="55sp" />

        <LinearLayout
            android:id="@+id/layRelative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_second_grade"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvResp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tvResp"
                    android:textColor="@color/AzulMedio"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_average_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:textSize="55sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPrecisa1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tvPrecisa1"
                    android:textColor="@color/AzulMedio"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:textSize="55sp" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fab_button_margin_bottom"
        android:src="@drawable/fab_save"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_anchor="@id/lt_relative"
        android:clickable="true"
        app:layout_anchorGravity="bottom|center"
        app:pressedTranslationZ="12dp" />


</android.support.design.widget.CoordinatorLayout>