<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lt_no_grades"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_no_grades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/no_grades"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:padding="70dp"
            android:src="@drawable/no_grade" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lt_grades"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lt_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_matter_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/matterName"
                android:textColor="@color/AzulMedio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_required_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/required_grade"
                android:textColor="@color/AzulMedio"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_grades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lt_sub_title"
            android:layout_marginBottom="100dp"
            android:scrollbarStyle="insideOverlay" />


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_drop_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fab_button_margin_bottom"
        android:clickable="true"
        android:src="@drawable/fab_delete"
        app:backgroundTint="@color/dark_red"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_anchor="@id/lt_grades"
        app:layout_anchorGravity="bottom|center"
        app:pressedTranslationZ="12dp" />


</android.support.design.widget.CoordinatorLayout>